--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="images/muawin_monogram.png" />
+    <link rel="icon" href="images/LOOP_Title.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Muawin Portal"
+      content="LOOP Portal"
     />
-    <link rel="apple-touch-icon" href="images/muawin_monogram.png" />
+    <link rel="apple-touch-icon" href="images/LOOP_Title.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Muawin</title>
+    <title>LOOP</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
